[gd_scene load_steps=8 format=2]

[ext_resource path="res://Units/Unit.gd" type="Script" id=1]
[ext_resource path="res://Sprite_Units/bronevik_s_bashney.png" type="Texture" id=2]
[ext_resource path="res://Sprite_Units/UNIT.png" type="Texture" id=3]
[ext_resource path="res://tiles/cl.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.2892, 54.6106 )

[node name="Unit" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2147483652
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.77778, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 8, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -8, 16 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 1, 0.6 )
enabled = true
collision_mask = 524288

[node name="Area2D2" type="Area2D" parent="RayCast2D"]
scale = Vector2( 1, 0.5 )
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/Area2D2"]
position = Vector2( 15.0129, 0.935389 )
shape = SubResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
texture = ExtResource( 3 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="body_entered" from="RayCast2D/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="RayCast2D/Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_shape_entered" from="RayCast2D/Area2D2" to="." method="_on_Area2D2_body_shape_entered"]
